style.css
@font-face {
    font-family: SourceSansRegular;
    src: url(SourceSansPro-Regular.otf);
}
body {
	margin: 0px;
	font-family: SourceSansRegular;
}
a {
	color: inherit;
	text-decoration: none;
	font-weight: bold;
	border-bottom: #ff9800 solid 1px;
}
a:hover {
	border-bottom: #ff9800 solid 3px;
	color: #ff9800;
}
a[alt="Source on Github"], a[alt="Source on Github"]:hover {
	border-bottom: none!important;
}
header {
	padding: 12px 12px 2px 12px;
	border-bottom: 1px solid rgba(218, 174, 159, 0.77);
	box-shadow: 0px 6px 18px 0px rgba(243, 198, 156, 0.4);
	background: linear-gradient(to bottom, rgba(233, 250, 255, 0.6) 0%, rgba(243, 198, 156, 0.48) 100%)
}
.HeaderCenter {
	width: 70%;
	margin-right: auto;
	margin-left: auto;
}
@media (max-width: 1087px) {
	.HeaderCenter {
		width: 100%;
	}
}
header h1 {
	opacity: 0.87;
	width: 240px;
	height: 41px;
	margin-top: -6px;
	margin-bottom: 3px;
	font-size: 32px;
}
@media (max-width: 715px) {
	header h1 {
		font-size: 0px;
	}
}

header ul {
	margin: 4px;
	padding: 0px;
	float: right;
	list-style-type: none;
}
header li {
	opacity: 0.7;
	display: inline;
	margin-right: 8px;
	font-size: 22px;
}
header img {
	margin-top: 4px;
	vertical-align: top;
}
.GitRepoImg {
	width: 24px;
	height: 24px;
}
footer {
	width:100%;
	height: 24px;
	text-align: center;
	font-size: 12px;
	position:absolute;
	bottom:0;
	left:0;
}
.TopPanel {
	width: 100%;
	min-height: 200px;
	text-align: center;
	vertical-align: middle;
	box-shadow: 0px 8px 16px 2px rgba(0, 85, 89, 0.1);
	border-bottom: 1px solid rgba(218, 174, 159, 0.77);
}
.TopPanel h2 {
	margin-top: 0px;
}
.TopLeft {
	overflow: hidden;
	height: 200px;
	float: left;
}
.TopLeft img {
	position: relative;
	top: -146px;
	left: -24px;
}

@media (max-width: 1087px) {
	.TopLeft {
		float: none;
	}
}
.TopRight {
	font-size: 24px;
	height: 200px;
	display: table;
	margin: 0px 26px;
}
.TopRight span {
	display: table-cell;
	vertical-align: middle;
	padding: 0px 16px;
}
.OverviewContainer {
	width: 100%;
	text-align: center;
}
.OverviewContainer h1 {
	margin-bottom: 4px;
	margin-top: 8px;
}
.OverviewPanel, .OverviewInfo {
	width: 400px;
	height: 280px;
	display: inline-block;
	padding: 0px;
	margin: 16px 20px 12px;
	vertical-align: middle;
	box-shadow: 0px 0px 8px 2px rgba(0, 85, 89, 0.3);
	background: linear-gradient(to bottom, rgba(233, 250, 255, 0.6) 0%, rgba(243, 198, 156, 0.2) 100%)
	border-top: 1px solid rgba(218, 174, 159, 0.77);
	border-bottom: 1px solid rgba(218, 174, 159, 0.77);
}
.OverviewContent {
	padding: 12px;
	text-align: center;
	font-size: 20px;
}
.OverviewContent h2 {
	font-size: 22px;	
	margin: 0px;
}
.OverviewTop {
	height: 100px;
	overflow: hidden;
}
.OverviewTop img {
	position: relative;
	top: -128px;
	left: -64px;
}
.OverviewInfo {
	width: 843px;
}
.OverviewInfo .OverviewContent {
	text-align: left;
}

.Content {
	width: 70%;
	max-width: 70%;
	margin: 28px auto 0px auto;
}

